--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -63,7 +63,7 @@ a[href]:hover {
 }
 /* active state for links */
 a[href]:active {
-    background-color: var(color-light-grey);
+    background-color: var(--color-light-grey);
 }
 
 /* visually hidden elements */
