--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -45,7 +45,7 @@ html {
 }
 /* default style (including <a>) */
 body,
-a[href] {
+a {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
@@ -54,15 +54,15 @@ a[href] {
     text-decoration: none;
 }
 /* visited state for links */
-a[href]:visited {
+a:visited {
     font-style: italic;
 }
 /* hover state for links */
-a[href]:hover {
+a:hover {
     text-decoration: underline;
 }
 /* active state for links */
-a[href]:active {
+a:active {
     background-color: var(--color-light-grey);
 }
 
