--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -44,8 +44,8 @@ html {
   font-size: 62.5%;
 }
 /* default style (including <a>) */
-body
-{
+body,
+a[href] {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
@@ -53,20 +53,20 @@ body
     line-height: var(--line-height-base);
     text-decoration: none;
 }
-/* target all actual links */
-a[href] {
+/* unvisited links*/
+a:link {
 text-decoration: none;
 }
 /* visited state for links */
-a[href]:visited {
+a:visited {
     font-style: italic;
 }
 /* hover state for links */
-a[href]:hover {
+a:hover {
     text-decoration: underline;
 }
 /* active state for links */
-a[href]:active {
+a:active {
     background-color: var(--color-light-grey);
 }
 /* visually hidden elements */
