--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -109,7 +109,8 @@ color: var(--section-title-color);
 /* container class */
 .container {
 width: 960px;
-margin: 0 auto; /* horizontal centre container */
+margin-left: auto;
+margin-right: auto;
 }
 /* h1 - h6 heading tags */
 h1, h2, h3, h4, h5, h6 {
