--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -97,7 +97,7 @@ a:active {
     background-color: var(--color-light-grey);
 }
 /* navbar menu */
-.navbar.menu {
+.navbar-menu {
     float: right;
 }
 /* nav */
