--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -101,7 +101,7 @@ a:active {
     float: right;
 }
 /* nav */
-nav {
+.nav {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -109,7 +109,7 @@ nav {
 }
 
 /* nav items */
-nav .nav-item {
+.nav-item {
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
@@ -119,7 +119,7 @@ nav .nav-item {
 }
 
 /* nav links */
-nav .nav-link {
+.nav-link {
   display: block;
   padding: 0.5rem 1rem;
 }
