--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -7,9 +7,9 @@
 --nav-item-font-family: var(--font-family-title);
 --nav-item-font-weight: var(--font-weight-bold);
 --nav-item-font-size: var(--font-size-medium);
---nav-item-letter-spacing: 0.4rem;
+--nav-item-letter-spacing: 0.04rem;
 --nav-item-display: inline-block;
---nav-item-margin: 3rem 0 0 0;
+--nav-item-margin: 0 0 3rem 0;
 --nav-item-link-hover: var(--color-primary);
 
 /* define font sizes */
@@ -110,12 +110,12 @@ a:active {
 
 /* nav items */
 .nav-item {
-  font-family: var(--item-font-family);
-  font-weight: var(--item-font-weight);
-  font-size: var(--item-font-size);
-  letter-spacing: var(--item-letter-spacing);
-  display: var(--item-display);
-  margin: var(--item-margin);
+  font-family: var(--nav-item-font-family);
+  font-weight: var(--nav-item-font-weight);
+  font-size: var(--nav-item-font-size);
+  letter-spacing: var(--nav-item-letter-spacing);
+  display: var(--nav-item-display);
+  margin: var(--nav-item-margin);
 }
 
 /* nav links */
@@ -126,7 +126,7 @@ a:active {
 
 /* nav link hover */
 nav .nav-link:hover {
-  color: var(--item-link-hover);
+  color: var(--nav-item-link-hover);
 }
 
 /* visually hidden elements */
