--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -209,6 +209,6 @@ margin: 0;
 font-size: var(--font-size-small);
 color: var(--text-color);
 }
-footer ul {
+.footer ul {
 text-align: right;    
 }
