--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -173,8 +173,8 @@ color: var(--section-title-color);
   font-weight: var(--font-weight-bold);
   margin: var(--section-tagline-margin);
 }
-/* section dark theme */
-.section[data-section-theme="dark"] {
+/* dark theme */
+[data-section-theme="dark"] {
   --text-color: var(--color-white);
   --section-title-color: var(--color-white);
   background-color: var(--color-black);
