--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -132,7 +132,7 @@ a:active {
 .social-link {
     display: block;
 }
-.social-link svg {
+.social-link > svg {
 fill: var(--text-color);
 }
 /* visually hidden elements */
