--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -119,7 +119,7 @@ a:active {
     color: var(--button-color);
     text-decoration: var(--button-hover-text-decoration);
 }
-.button a:hover {
+.button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-text-decoration);
     background: var(--button-hover-background);
