--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -182,7 +182,7 @@ fill: var(--text-color);
 .card-testimonial {
     text-align: center;
 }
-.card-avatar .card-testimonial {
+.card-testimonial .card-avatar {
     border-radius: 50%;
     width: 10rem;
     height: 10rem;
