--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -164,7 +164,7 @@ a:active {
   display: var(--nav-item-display);
   margin: var(--nav-item-margin);
 }
-nav .nav-link::before {
+.nav .nav-link::before {
   content: "";
   position: absolute;
   top: 0;
