--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -254,7 +254,7 @@ z-index: 1;
     height: 100%;
     position: relative;
 }
-.card-work .card-title {
+.card-work .card-title a {
     display: block;
     text-decoration: none;
     padding-top: 45%;
