--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -259,6 +259,7 @@ fill: var(--text-color);
 }
 .card-work:hover .card-image {
 transform: scale(1.2);
+transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 .card-work:hover .card-outer {
     transform: scale(0.95);
